--- a/src/components/SideIcons.astro
+++ b/src/components/SideIcons.astro
@@ -5,19 +5,22 @@ import { Icons } from "@/components/Icons";
 <div
   class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:right-8 md:flex lg:bottom-16 lg:right-12"
 >
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  <a
+    href="mailto:lcalero904@gmail.com"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.mail className="h-5 w-5 shrink-0" />
-  </div>
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  </a>
+  <a
+    href="https://www.instagram.com/lauracalero1"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.instagram className="h-5 w-5 shrink-0" />
-  </div>
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  </a>
+  <a
+    href="https://www.linkedin.com/in/laura-calero-49450414a"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.linkedin className="h-5 w-5 shrink-0" />
-  </div>
+  </a>
 </div>
