--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -34,6 +34,7 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="horizontal"
         src="https://utfs.io/f/9b6797a7-4bb3-4673-8ba2-5ca4a3afe456-1zral.webm"
         alt="Video"
+        fullScreen
       />
       <BentoItem
         type="image"
@@ -64,6 +65,25 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="horizontal"
         src="/images/img-7.jpg"
         alt="Image 7"
+      />
+
+      <BentoItem
+        type="video"
+        orientation="horizontal"
+        src="https://utfs.io/f/98f7a070-08f7-4f9b-810a-4c351adc9121-1rdevm.webm"
+        alt="Video"
+      />
+      <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-8.jpg"
+        alt="Image 8"
+      />
+      <BentoItem
+        type="video"
+        orientation="horizontal"
+        src="https://utfs.io/f/f2647725-e08a-4a33-b8ac-a7d2a7648b6b-utjao2.mp4"
+        alt="Video"
       />
     </BentoGrid>
   </section>
