--- a/src/components/HeaderIcons.astro
+++ b/src/components/HeaderIcons.astro
@@ -3,19 +3,22 @@ import { Icons } from "@/components/Icons";
 ---
 
 <div class="z-40 flex items-center justify-between gap-x-4 md:hidden">
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  <a
+    href="mailto:lcalero904@gmail.com"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.mail className="h-6 w-6 shrink-0" />
-  </div>
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  </a>
+  <a
+    href="https://www.instagram.com/lauracalero1"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.instagram className="h-6 w-6 shrink-0" />
-  </div>
-  <div
-    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  </a>
+  <a
+    href="https://www.linkedin.com/in/laura-calero-49450414a"
+    class="rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
     <Icons.linkedin className="h-6 w-6 shrink-0" />
-  </div>
+  </a>
 </div>
