Update styling and layout in ExperienceCard and SoundButton components

--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -14,7 +14,7 @@ const { dateStart, dateEnd, title, company, description } = Astro.props;
   class="group w-full border-b border-border py-4 font-semibold transition-colors duration-300 hover:bg-primary md:py-0"
 >
   <article
-    class="container flex max-w-screen-lg flex-col gap-y-2 text-xl md:grid md:h-36 md:grid-cols-12 md:items-center md:text-3xl"
+    class="container flex max-w-screen-lg flex-col gap-2 text-xl md:grid md:h-36 md:grid-cols-12 md:items-center md:text-3xl"
   >
     <span
       class="transition-colors duration-150 group-hover:text-background md:col-span-4"
