--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -35,6 +35,7 @@ import BentoItem from "@/components/BentoItem.astro";
         src="https://utfs.io/f/9b6797a7-4bb3-4673-8ba2-5ca4a3afe456-1zral.webm"
         alt="Video"
         fullScreen
+        posterTime={10}
       />
       <BentoItem
         type="image"
@@ -53,6 +54,7 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="vertical"
         src="https://utfs.io/f/50ee9ac5-083c-4e0b-981c-ca736fa53b66-71x9kb.mp4"
         alt="Video"
+        posterTime={1}
       />
       <BentoItem
         type="image"
@@ -72,6 +74,7 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="horizontal"
         src="https://utfs.io/f/98f7a070-08f7-4f9b-810a-4c351adc9121-1rdevm.webm"
         alt="Video"
+        posterTime={2}
       />
       <BentoItem
         type="image"
@@ -84,6 +87,7 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="horizontal"
         src="https://utfs.io/f/f2647725-e08a-4a33-b8ac-a7d2a7648b6b-utjao2.mp4"
         alt="Video"
+        posterTime={3}
       />
     </BentoGrid>
   </section>
