feat: Update Content section with video and new images

--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -12,10 +12,11 @@ import BentoItem from "@/components/BentoItem.astro";
 
     <BentoGrid>
       <BentoItem
-        type="image"
+        type="video"
         orientation="vertical"
-        src="/images/img-1.jpg"
-        alt="Image 1"
+        src="https://utfs.io/f/6d4f263d-9d47-4c04-8a57-e136928f0fb0-g78ze7.mp4"
+        alt="Video"
+        posterTime={12}
       />
       <BentoItem
         type="image"
@@ -46,8 +47,8 @@ import BentoItem from "@/components/BentoItem.astro";
       <BentoItem
         type="image"
         orientation="vertical"
-        src="/images/img-5.jpg"
-        alt="Image 5"
+        src="/images/img-1.jpg"
+        alt="Image 1"
       />
       <BentoItem
         type="video"
